# Phong-lighting

./: .gitignore  CMakeLists.txt  CMakePresets.json  launch.cmake
cmake/: compiler_flags.cmake  library_setup.cmake
src/: CMakeLists.txt  main.cpp
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/include/: camera.hpp  clock.hpp  globals.hpp  shaders.hpp
